<resources>
    <string name="app_name">PicM</string>
    <!-- Strings related to login -->
    <string name="prompt_user">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>

    <string name="load_piclist_error">加载失败</string>

    <string name="title_activity_pic_list">PicListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">游客</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_test">功能测试</string>
    <string name="menu_home">主页</string>
    <string name="menu_setting">设置</string>
    <string name="menu_send">上传</string>
    <string name="action_upload">上传</string>

    <string name="msg_fail_pickpic">选择图片失败</string>
    <string name="msg_fail_fetchpics">加载图片列表失败</string>

    <string name="msg_suc_upload">上传成功</string>

    <string name="title_info_detail">详细信息</string>

    <string name="button_negative">关闭</string>

    <string name="text_info_preffix_date">日期: </string>
    <string name="text_info_preffix_username">用户: </string>
    <string name="text_info_preffix_width">宽度: </string>
    <string name="text_info_preffix_height">高度: </string>
    <string name="text_info_preffix_size">大小: </string>

    <string name="menu_home_span">列数</string>
    <string name="menu_home_refresh">刷新</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="test_header">调试</string>

    <!-- Test Preferences -->
    <string name="mock_title">图片Mock</string>
    <string name="mock_summary_on">Mock后端启用,仅用于图片显示调试</string>
    <string name="mock_summary_off">Mock关闭</string>

    <string name="menu_info">详细信息</string>
    <string name="menu_savepic">保存图片</string>
    <string name="menu_sharepic">分享图片</string>
    <string name="menu_editpic">编辑图片</string>

    <string name="no_mount">外部存储不可用</string>
    <string name="create_dir_fail">创建目录失败</string>
    <string name="file_exist">文件已存在</string>

    <string name="send_to">分享方式</string>
    <string name="edit_to">编辑方式</string>
    <string name="menu_copyurl">复制外链</string>
    <string name="menu_usergallery">我的上传</string>
    <string name="menu_delpic">删除图片</string>
</resources>
